Fixed logo banner alignment

--- a/Sass/main.sass
+++ b/Sass/main.sass
@@ -258,9 +258,9 @@ ul.nav a
 			#caritas
 				margin-left: 3%
 		@media (max-width: 400px)
-			margin-left: 0%
+			margin-left: 3%
 			#caritas
-				margin-left: 0%
+				margin-left: 2%
 		
 	img
 		display: inline
